# LLVM-MCA-Daemon

./: .gitignore  BrokerFacade.h  CMakeLists.txt  COMMIT_ID  LLVM_COMMIT_ID.txt  MCAWorker.cpp  MCAWorker.h  MDCategories.h  MetadataCategories.cpp  MetadataCategories.h  MetadataRegistry.h  PipelinePrinter.cpp  PipelinePrinter.h  README.md  RawBytesProtocol.cpp  RegionMarker.h  Statistics.h  llvm-mcad.cpp
.github/workflows/: build.yaml  test.yaml
Brokers/: AsmFileBroker.cpp  AsmFileBroker.h  Broker.h  BrokerPlugin.cpp  BrokerPlugin.h  RawBytesBroker.cpp
Brokers/AsmUtils/: CodeRegionGenerator.cpp  CodeRegionGenerator.h
CustomHWUnits/: AbstractBranchPredictorUnit.h  BranchUnit.cpp  BranchUnit.h  Cache.h  CustomSourceMgr.cpp  CustomSourceMgr.h  IndirectBPU.cpp  IndirectBPU.h  LocalBPU.cpp  LocalBPU.h  MCADLSUnit.cpp  MCADLSUnit.h  NaiveBranchPredictorUnit.cpp  NaiveBranchPredictorUnit.h  SkylakeBranchUnit.cpp  SkylakeBranchUnit.h
CustomStages/: MCADFetchDelayStage.cpp  MCADFetchDelayStage.h
MCAViews/: InstructionView.cpp  InstructionView.h  SummaryView.cpp  SummaryView.h  TimelineView.cpp  TimelineView.h  View.cpp
ci/: run.sh
cmake/: FindGperftools.cmake  FindLibunwind.cmake
doc/: cache-simulation.md
docker/: Dockerfile  compose.yml  setup-build.sh  setup-deps.sh  setup-llvm.sh  setup-ssh.sh  up
eval/: plot.py  run.py
eval/branch_prediction/: Makefile  gen_bp.py  plot.py
eval/cache/: Makefile  gen_cache.py  plot.py  plot_cycles.py  results_10000.csv  run.py
lib/gem5/: intmath.h  sat_counter.h
patches/: 0001-MCAD-Patch-0-Add-identifier-field-to-mca-Instruction.patch  0002-MCAD-Patch-1-MCA-Disentangle-MemoryGroup-from-LSUnit.patch  0002-MCAD-Patch-2-WIP-Start-mapping-e500-itinerary-model-.patch  abstract-memory-group.patch  add-identifier-to-mca-instruction.patch  make-any-work-across-shared-libs.patch  start-mapping-e500-itenerary-model-to-new-schedule.patch
plugins/: CMakeLists.txt
plugins/binja-broker/: Broker.cpp  Broker.exports  CMakeLists.txt  README.md  binja.grpc.pb.cc  binja.grpc.pb.h  binja.pb.cc  binja.pb.h  binja.proto  binja_pb2.py  binja_pb2.pyi  binja_pb2_grpc.py  grpc_script.py
plugins/binja-broker/binja-plugin/: MCADBridge.py  __init__.py  binja_pb2.py  binja_pb2.pyi  binja_pb2_grpc.py  ghidra-script.py  test_script.py
plugins/qemu-broker/: BinaryRegions.cpp  BinaryRegions.h  Broker.cpp  Broker.exports  CMakeLists.txt  README.md
plugins/qemu-broker/Qemu/: CMakeLists.txt  Plugin.cpp
plugins/qemu-broker/Serialization/: mcad.fbs  mcad_generated.h
plugins/qemu-broker/patches/: qemu-patch.diff  riscv-arm-x86-qemu.patch
plugins/qemu-broker/test/: CMakeLists.txt  fbs_client.cpp
plugins/qemu-broker/utils/: CMakeLists.txt  qemu-broker-client.cpp
plugins/qemu-protocol/: CMakeLists.txt  Proxy.cpp
plugins/tracer-broker/: Broker.cpp  CMakeLists.txt  LocalTraceGenerator.cpp  LocalTraceGenerator.h  README.md
plugins/vivisect-broker/: Broker.cpp  Broker.exports  CMakeLists.txt  README.md  cm2350.patch  emulator.grpc.pb.cc  emulator.grpc.pb.h  emulator.pb.cc  emulator.pb.h  emulator.proto  emulator_pb2.py  emulator_pb2.pyi  generate_interface.sh  main.cpp  vivisect_server.py  vivisect_test_client.py  vivserver.proto
plugins/vivisect-broker/broker/: Broker.cpp  Broker.exports  Broker.h  CMakeLists.txt  vivisect.ipynb  vivisect_server.py  vivisect_test_client.py  vivserver.grpc.pb.cc  vivserver.grpc.pb.h  vivserver.pb.cc  vivserver.pb.h  vivserver.proto  vivserver_pb2.py  vivserver_pb2.pyi  vivserver_pb2_grpc.py
plugins/vivisect-broker/grpc_client/: __init__.py  emulator_pb2.py  emulator_pb2.pyi  emulator_pb2_grpc.py  grpc_client.py
plugins/vivisect-broker/python_client/: emulator_pb2.py  emulator_pb2_grpc.py  grpc_client.py
test/: lit.cfg.py
test/binja-broker/: binja_pb2.py  binja_pb2_grpc.py  empty_arg.py  empty_arg.s  invalid_arg.py  invalid_arg.s  sanity-x64.py  sanity-x64.s  sanity.py  sanity.s  utils.py
